[gd_scene load_steps=2 format=3 uid="uid://dny37jal4ohdg"]

[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="1_5r30l"]

[node name="tutorial_pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5r30l")

[node name="menu" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 0.9
text = "menu
"

[node name="new" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.6
text = "restart"

[node name="options" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.65
anchor_right = 0.8
anchor_bottom = 0.75
text = "options"

[node name="continue" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.35
anchor_right = 0.8
anchor_bottom = 0.45
text = "continue"

[connection signal="pressed" from="menu" to="." method="go_to_main_menu"]
[connection signal="pressed" from="new" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="options" to="." method="options_pressed"]
[connection signal="pressed" from="continue" to="." method="unpause"]
